Relayout frame buttons when fullscreen state changes

This CL fixes a bug where frame buttons are not rendered after these steps:
1. Maximize a video
2. Alt-tab to another app
3. Alt-tab back to the video
4. Unmaximize the video

The buttons were getting rendered at zero-size since the tabstrip has 0 height
when the video is playing.  The solution is to relayout the buttons when the
maximized state changes.

BUG=803063
R=sky

Change-Id: Ic1c1e98ce08ead6e8dee284a333515ed022520a5