chrome/browser/ui/views/frame/browser_desktop_window_tree_host_x11.cc
@@ -71,6 +71,10 @@ void BrowserDesktopWindowTreeHostX11::OnMaximizedStateChanged() {
   browser_view_->frame()->GetFrameView()->OnMaximizedStateChanged();
 }
 
+void BrowserDesktopWindowTreeHostX11::OnFullscreenStateChanged() {
+  browser_view_->frame()->GetFrameView()->OnFullscreenStateChanged();
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // BrowserDesktopWindowTreeHost, public:
 
