ui/views/widget/desktop_aura/desktop_window_tree_host_x11.cc
@@ -995,6 +995,7 @@ void DesktopWindowTreeHostX11::SetFullscreen(bool fullscreen) {
   if (is_fullscreen_ == fullscreen)
     return;
   is_fullscreen_ = fullscreen;
+  OnFullscreenStateChanged();
   if (is_fullscreen_)
     delayed_resize_task_.Cancel();
 
@@ -1320,6 +1321,8 @@ void DesktopWindowTreeHostX11::OnDisplayMetricsChanged(
 }
 
 void DesktopWindowTreeHostX11::OnMaximizedStateChanged() {}
+
+void DesktopWindowTreeHostX11::OnFullscreenStateChanged() {}
 
 ////////////////////////////////////////////////////////////////////////////////
 // DesktopWindowTreeHostX11, private:
